[package]
name = "bitnames_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = [ "derive" ] }
prost = "0.11.8"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
anyhow = "1.0.70"
fake = "2.5.0"
rand = "0.7"
bincode = "1.3.3"
serde = "1.0.159"

ureq-jsonrpc = { git = "https://github.com/nchashch/ureq-jsonrpc" }

bitnames_types = { path = "../types" }
bitnames_api = { path = "../api" }
