[package]
name = "bitnames_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = "2.5.0"
rand = "0.7"
anyhow = "1.0.70"
heed = { git = "https://github.com/meilisearch/heed", tag = "v0.12.4" }
tonic = "0.8.3"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "sync"] }
bincode = "1.3.3"
futures = "0.3.27"
jsonrpsee = { version = "0.15.1", features = ["client", "macros"] }
serde = "1.0.158"
base64 = "0.21.0"
hex = "0.4.3"
serde_json = "1.0.95"
thiserror = "1.0.40"
log = "0.4.17"

bitnames_types = { path = "../types" }
bitnames_state = { path = "../state" }
bitnames_api = { path = "../api" }
