[package]
name = "bitnames_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.3"
bitcoin = "0.29.2"
serde = "1.0.159"
hex = "0.4.3"

sdk_types = { git = "https://github.com/nchashch/sdk_types" }
sdk_authorization_ed25519_dalek = { git = "https://github.com/nchashch/sdk_authorization_ed25519_dalek" }
