[package]
name = "bitnames_wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bip39 = "2.0.0"
clap = { version = "4.2.1", features = ["derive"] }
ed25519-dalek-bip32 = "0.2.0"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
heed = { git = "https://github.com/meilisearch/heed", tag = "v0.12.4" }
thiserror = "1.0.40"
bincode = "1.3.3"
tonic = "0.9.1"
blake3 = "1.3.3"

bitnames_api = { path = "../api" }
bitnames_types = { path = "../types" }
